discussion/kv_engine/179408/179408_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Move BackfillTrackingIface out of DcpConnMap

This change is a refactoring change that forms part of the overall
change which will ensure RangeScans are capped in terms of how many
file-descriptors are in-use.

The current BackfillTrackingIface which is implemented in DcpConnMap
is used to count and limit how many DCP backfills are running, ensuring
DCP doesn't just keep opening files and consuming all file-descriptors.

RangeScans will also participate in this calculation and will need to
call into this object.

The refactoring:

1) moves the tracking out of the DcpConnMap as it no longer fits as
the owner. The new owner is KVBucket

2) Renames BackfillTrackingIface as KVStoreScanTracker as fundamentally
we care about how many ScanContexts have been created by KVStore::scan
be it RangeScan or DCPBackfill.

3) Modernise the tracking code to remove the std::mutex and instead use
a folly::Synchronised

Future change will extend the KVStoreScanTracker so it counts
RangeScans and prevents the RangeScan create path from exhausting file
resources.

Change-Id: I9e506fecd7ce576aa38e2c59de3c44a08e5e67ad

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-08-31 13:38:58.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-31 13:59:22.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19886/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill-manager.cc:110:7: error: member initializer "backfillTracker" does not name a non-static data member or base class [clang-diagnostic-error]
      backfillTracker(backfillTracker),
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill-manager.cc:166:9: error: use of undeclared identifier "backfillTracker" [clang-diagnostic-error]
        backfillTracker.decrNumRunningBackfills();
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill-manager.cc:173:9: error: use of undeclared identifier "backfillTracker" [clang-diagnostic-error]
        backfillTracker.decrNumRunningBackfills();
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill-manager.cc:181:9: error: use of undeclared identifier "backfillTracker" [clang-diagnostic-error]
        backfillTracker.decrNumRunningBackfills();
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill-manager.cc:199:9: error: use of undeclared identifier "backfillTracker" [clang-diagnostic-error]
    if (backfillTracker.canAddBackfillToActiveQ()) {
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill-manager.cc:319:17: error: use of undeclared identifier "backfillTracker" [clang-diagnostic-error]
                backfillTracker.decrNumRunningBackfills();
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill-manager.cc:378:13: error: use of undeclared identifier "backfillTracker" [clang-diagnostic-error]
            backfillTracker.decrNumRunningBackfills();
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill-manager.cc:392:12: error: use of undeclared identifier "backfillTracker" [clang-diagnostic-error]
           backfillTracker.canAddBackfillToActiveQ()) {
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19886/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill-manager.cc:110:7:
error: member initializer "backfillTracker" does not name a non-static data member or base class [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19886/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48820/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/dcp/backfill-manager.cc(111): error C2530: "BackfillManager::scanTracker": references must be initialized ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48820/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41045/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/backfill-manager.cc:110:7:
error: member initializer "backfillTracker" does not name a non-static data member or base class
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41045/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30221/ : FAILURE

Compile error at [2022-08-31T13:57:46.944Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/dcp/backfill-manager.cc:110:7:
error: member initializer "backfillTracker" does not name a non-static data member or base class
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30221/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21133/ : FAILURE

Compile error at [2022-08-31T13:57:19.773Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/dcp/backfill-manager.cc:110:7:
error: member initializer "backfillTracker" does not name a non-static data member or base class
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21133/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22192/ : FAILURE

Compile error at [2022-08-31T13:58:31.900Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/dcp/backfill-manager.cc:110:7:
error: class ?BackfillManager? does not have any field named ?backfillTracker?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22192/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9681/ : FAILURE

Compile error at [2022-08-31T13:44:45.729Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/dcp/backfill-manager.cc:110:7:
error: class ?BackfillManager? does not have any field named ?backfillTracker?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9681/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9582/ : FAILURE

Compile error at [2022-08-31T13:56:55.311Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/dcp/backfill-manager.cc:110:7:
error: member initializer "backfillTracker" does not name a non-static data member or base class
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9582/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21840/ : FAILURE

Compile error at [2022-08-31T13:58:41.642Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/dcp/backfill-manager.cc:110:7:
error: class ?BackfillManager? does not have any field named ?backfillTracker?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21840/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22932/ : FAILURE

Compile error at [2022-08-31T13:56:53.447Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/dcp/backfill-manager.cc:110:7:
error: member initializer "backfillTracker" does not name a non-static data member or base class
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22932/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19107/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
